# lead-gen-agent

./: .gitignore  CLAUDE.md  Makefile  railway.toml
.github/workflows/: ci.yml  scrape-iso-queues.yml
agent/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
agent/src/: agent.py  auth.py  (+25 more)
frontend/: DESIGN.md  package-lock.json  package.json  tmp-font-comparison.html
plans/: 2026-03-01-phase1-iso-queue-ingestion-dashboard.md  2026-03-07-solar-sentinel-satellite-detection.md  2026-03-08-tool-directory-refactor.md  2026-03-11-chat-ui-polish.md  2026-03-11-liav-feedback-action-plan.md  2026-03-11-research-button-improvements.md  2026-03-11-research-quick-wins.md  2026-03-12-agent-interaction-redesign.md  2026-03-12-agent-pause-feedback-research.md  2026-03-12-deep-dive-harvey-claude-manus.md  2026-03-16-epc-data-sources-research.md  2026-05-18-agent-memory-redesign.md  gap-1-project-lifecycle-stages.md  gap-2-local-permitting-data.md  gap-3-sales-timing-signals.md  social-listening-epc-sop.md  social-listening-progress-report-liav.md  team-feedback-gap-analysis.md  tier1-markdown-rendering-breakdown.md
research/: 2026-03-01-ferc-and-state-permitting-sources.md  2026-03-01-iso-scraper-data-sources.md  2026-05-17-agentic-rag-memory-findings.md  2026-05-17-gbrain-memory-architecture-findings.md
scrapers/: pyproject.toml
scrapers/src/: config.py  db.py  filters.py  geocode_backfill.py  geocoder.py  main.py  scoring.py  transform.py
scrapers/src/scrapers/: base.py  caiso.py  ercot.py  gem.py  miso.py
scrapers/tests/: test_geocoder.py
(+224 files in other folders)
